# traceattrs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/traceattrs/: __init__.py  traceattrs.py
test/: test_traceattrs.py
